fixed some issues on mobile

--- a/pitches/style.css
+++ b/pitches/style.css
@@ -170,7 +170,8 @@ textarea[class='inputText'] {
     }
     
     .pitch{
-        margin: 40px 0px;
+        margin: 60px 0px;
+        margin-top: 0px;
     }
 
     .underline {
